--- a/src/app/platform/pages/my-bookings/my-bookings-table/my-bookings-table.component.html
+++ b/src/app/platform/pages/my-bookings/my-bookings-table/my-bookings-table.component.html
@@ -74,7 +74,7 @@
               </td>
             </tr>
             <tr>
-              <td [colSpan]="calcWidth()" class="cancelImportAlert">
+              <td [colSpan]="calcWidth()" class="noHover">
                 <b2b-simple-alert *ngIf="booking.cancelImport" [title]="'Cancel import'" [type]="'info'" [message]="' ' + booking.cancelImport"></b2b-simple-alert>
               </td>
             </tr>
