--- a/src/app/platform/components/hotel-option/hotel-option.component.html
+++ b/src/app/platform/components/hotel-option/hotel-option.component.html
@@ -53,20 +53,20 @@
 
             <td>{{option.boardCode | mealplan : mealplansAvailable}}</td>
 
-            <td *ngIf="option.cancelPolicy.cancelPenalties | getMax; else noOptions; let maxOption" (click)="openCancelPolicyModal(option?.cancelPolicy?.cancelPenalties)">
+            <td *ngIf="option.cancelPolicy.cancelPenalties | getMax; else emptyTd; let maxOption" (click)="openCancelPolicyModal(option?.cancelPolicy?.cancelPenalties)">
               <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" i18n-title="@@penalty-tooltip"
                 title="Click to see penalty list"></i>
               {{(maxOption | mainPenalty : criteria.checkIn) | dateFormat:environment.organization.dateFormat}} | {{maxOption.value | number
               : '1.2-2'}} {{maxOption.currency}}
             </td>
 
-            <ng-template #noOptions>
+            <ng-template #emptyTd>
               <td></td>
             </ng-template>
 
             <td *ngIf="option.rateRules; else checkRefundable">{{option.rateRules | package}}</td>
             <ng-template #checkRefundable>
-              <td *ngIf="option?.cancelPolicy?.refundable === false">NRF</td>
+              <td *ngIf="option?.cancelPolicy?.refundable === false; else emptyTd">NRF</td>
             </ng-template>
             <td>{{option.paymentType}}</td>
 
