--- a/src/assets/css/travelgatex.css
+++ b/src/assets/css/travelgatex.css
@@ -1617,10 +1617,10 @@ pre {
     padding: 0.75rem;
     vertical-align: top;
     border-top: 1px solid #eceeef; }
-  .table td.cancelImportAlert {
+  .table td.noHover {
     border-top: 0px solid #eceeef;
   }
-  .table td.cancelImportAlert:hover {
+  .table td.noHover:hover {
     background-color: white;
   }
   .table td.cancelImportAlert div {
@@ -7253,7 +7253,7 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 .modal-smy .modal-body {
   padding: 0; }
 
-.modal-smy .close {
+.modal-smy>.close {
   position: absolute;
   top: -20px;
   right: -20px;
