More improvements on dropdown

--- a/src/app/shared/components/search-global/search-global.component.html
+++ b/src/app/shared/components/search-global/search-global.component.html
@@ -6,42 +6,28 @@
       </span>
       <span *ngIf="item.destination; else hotel">{{item.display}} - ({{item.value}})</span>
       <ng-template #hotel><span>{{item.display}} - [hotel in {{item.location.city}} - ({{item.location.country}}) - ({{item.value}})]</span></ng-template>
-
     </div>
-
-    <input type="text" id="inputSearch" [(ngModel)]="searchValue" #inputSearch (keyup)="onKeyupFilter(inputSearch.value, $event)" (keydown)="selectActionByKey($event)"
-      class="form-control w-100" placeholder="..." [disabled]="!items">
+    <input type="text" id="inputSearch" [(ngModel)]="searchValue" #inputSearch (keyup)="onKeyupFilter(inputSearch.value, $event)"
+      (keydown)="selectActionByKey($event)" class="form-control w-100" placeholder="..." [disabled]="!itemData">
   </div>
   <div style="background: white; width: 100%;">
     <div #dropdownElem class="custom-dropdown hidden" [@dropdown]="hiddenDropdown">
-      <div class="dropdown-item tit pb-1">
-        <div class="media d-flex align-items-center pb-2">
-          <div class="media-left d-flex align-items-center">
-            <span class="seller-ico-bg-color"></span>
-          </div>
-          <div class="media-body">
-            <p class="font-weight-bold ml-1 mb-0">Hotels</p>
-          </div>
-        </div>
-      </div>
-      <ng-container *ngFor="let hotel of hotels">
-        <span (click)="addItem(hotel)" (keydown)="addItem(hotel)" [ngClass]="{'focused': hotel.focused}" class="dropdown-item d-flex custom-dropdown-item">{{hotel.display}} - [hotel in {{hotel.location.city}} - ({{hotel.location.country}}) - ({{hotel.value}})]</span>
-      </ng-container>
-      <span class="dropdown-item d-flex ml-auto text-help" *ngIf="hotels?.length === 0">No results</span>
-      <div class="dropdown-item tit pb-1">
-        <div class="media d-flex align-items-center pb-2">
-          <div class="media-left d-flex align-items-center">
-            <span class="buyer-ico-bg-color"></span>
-          </div>
-          <div class="media-body">
-            <p class="font-weight-bold ml-1 mb-0">Destinations</p>
+      <div *ngFor="let collection of collections">
+        <div class="dropdown-item tit pb-1">
+          <div class="media d-flex align-items-center pb-2">
+            <div class="media-left d-flex align-items-center">
+              <span class="seller-ico-bg-color"></span>
+            </div>
+            <div class="media-body">
+              <p class="font-weight-bold ml-1 mb-0">{{collection.title}}</p>
+            </div>
           </div>
         </div>
+        <ng-container *ngFor="let item of collection.list">
+          <span (click)="addItem(item)" (keydown)="addItem(item)" [ngClass]="{'focused': item.focused}" class="dropdown-item d-flex custom-dropdown-item">{{item.display}}</span>
+        </ng-container>
+        <span class="dropdown-item d-flex ml-auto text-help" *ngIf="collection.list?.length === 0">No results</span>
       </div>
-      <ng-container *ngFor="let destination of destinations">
-        <span (click)="addItem(destination)" [ngClass]="{'focused': destination.focused}" class="dropdown-item d-flex custom-dropdown-item">{{destination.display}} - ({{destination.value}})</span>
-      </ng-container>
-      <span class="dropdown-item d-flex ml-auto text-help" *ngIf="destinations?.length === 0">No results</span>
     </div>
   </div>
 </div>
