fix(valuation-modal): Quote modal  wasn't showing the price given by the request

--- a/src/app/platform/components/valuation-modal/valuation-modal.component.html
+++ b/src/app/platform/components/valuation-modal/valuation-modal.component.html
@@ -50,7 +50,7 @@
         </div>
       </div>
 
-      <b2b-price-table [price]="option.price"></b2b-price-table>
+      <b2b-price-table [price]="quote.price"></b2b-price-table>
     </div>
   </div>
 
