feat(App): Organization selector

--- a/src/app/platform/components/header/header.component.html
+++ b/src/app/platform/components/header/header.component.html
@@ -15,6 +15,7 @@
 
               <div class="float-right">
 
+                <b2b-organization-selector [class]="'organization-platform'"></b2b-organization-selector>
                 <b2b-lang-select [class]="'lang-platform'"></b2b-lang-select>
 
                 <div class="mo-myaccount-header dropdown">
