--- a/src/app/platform/components/valuation-modal/valuation-modal.component.html
+++ b/src/app/platform/components/valuation-modal/valuation-modal.component.html
@@ -30,7 +30,7 @@
       <div class="row">
         <div class="col-md-3 offset-md-9">
           <button class="btn btn-sm btn-info smy" (click)="showRequest()" i18n="@@show-request">Show RQ</button>
-          <button class="btn btn-sm btn-info smy ml-10" (click)="showResponse()" i18n="@@show-response">Show RS</button>
+          <button class="btn btn-sm btn-info smy ml-10" (click)="showResponse()" i18n="@@show-response" style="margin-left: 10px">Show RS</button>
         </div>
       </div>
     </div>
