--- a/src/app/platform/pages/my-bookings/my-bookings.component.html
+++ b/src/app/platform/pages/my-bookings/my-bookings.component.html
@@ -106,10 +106,10 @@
   </form>
   <div class="row">
 
-    <div class="col-md-2 offset-md-8" style="padding-top:2%">
+    <div class="col-md-3 offset-md-7" style="padding-top:2%">
       <div *ngIf="bookings">
         <button class="btn btn-sm btn-info smy" (click)="showRequest()" i18n="@@show-request">Show RQ</button>
-        <button class="btn btn-sm btn-info smy ml-10" (click)="showResponse()" i18n="@@show-response">Show RS</button>
+        <button class="btn btn-sm btn-info smy ml-10" (click)="showResponse()" i18n="@@show-response" style="margin-left: 10px">Show RS</button>
       </div>
     </div>
     <div class="col-md-2" *ngIf="myBookingForm.controls['typeSearch'].value === bookingCriteriaType.REFERENCES">
