refactor(availability): Selectors from client/supplider/access visible where there is no items to select to show more information

--- a/src/app/shared/components/selectors/client-selector/client-selector.component.html
+++ b/src/app/shared/components/selectors/client-selector/client-selector.component.html
@@ -1,7 +1,7 @@
 <div class="form-group">
   <label>
     <span i18n="@@client">Client</span>:</label>
-  <select class="form-control" [(ngModel)]="clientSelected" name="clientSelected" (change)=onClientSelected() [disabled]="!clients || clients.length === 0">
+  <select class="form-control" [(ngModel)]="clientSelected" name="clientSelected" (change)=onClientSelected()>
     <option *ngFor="let client of clients" [value]="client.code">{{client.name}}</option>
   </select>
   <p *ngIf="showErrorClients" i18n="@@no-clients">There aren't clients available</p>
