--- a/src/app/platform/components/supplier-accesses/supplier-accesses.component.html
+++ b/src/app/platform/components/supplier-accesses/supplier-accesses.component.html
@@ -3,7 +3,7 @@
     <div class="form-group">
       <label>
         <span i18n="@@supplier">Supplier</span>:</label>
-      <select class="form-control" [(ngModel)]="supplierSelected" name="supplierSelected" (change)=onSupplierSelected() [disabled]="!suppliers || suppliers.length === 0">
+      <select class="form-control" [(ngModel)]="supplierSelected" name="supplierSelected" (change)=onSupplierSelected()>
         <option *ngFor="let supplier of suppliers" [value]="supplier.code">{{supplier.name}}</option>
       </select>
       <p *ngIf="showErrorSuppliers" i18n="@@no-suppliers">There aren't suppliers available</p>
@@ -13,8 +13,7 @@
     <div class="form-group">
       <label>
         <span i18n="@@accesses">Accesses</span>:</label>
-      <select class="form-control" [(ngModel)]="accessesSelected" name="accessesSelected" (ngModelChange)=onAccessSelected($event)
-        [disabled]="!accesses || accesses.length === 0">
+      <select class="form-control" [(ngModel)]="accessesSelected" name="accessesSelected" (ngModelChange)=onAccessSelected($event)>
         <option *ngFor="let access of accesses" [value]="access.code">{{access.name}}</option>
       </select>
       <p *ngIf="supplierSelected && (!accesses || accesses.length === 0)">There aren't accesses available</p>
