fix(selectors): Some change caused the selectors not to be displayed. Now are displayed again.

--- a/src/assets/css/travelgatex.css
+++ b/src/assets/css/travelgatex.css
@@ -2516,7 +2516,7 @@ tbody.collapse.show {
     cursor: not-allowed;
     background-color: transparent; }
 
-.show > .dropdown-menu {
+.show > .dropdown-menu, .show.dropdown-menu{
   display: block; }
 
 .show > a {
