--- a/src/app/platform/pages/result-bookings/result-bookings.component.html
+++ b/src/app/platform/pages/result-bookings/result-bookings.component.html
@@ -9,7 +9,8 @@
               <span i18n="@@results">{availability?.length, plural, =0 {Results} =1 {Result} other {Results}}</span>
             </strong>
             <span i18n="@@for"> for</span> "{{criteria | result}}"</h4>
-          <h5 i18n="@@title-accomodations">Choose from more than 500,000 accommodations. We are present in ALL countries of the world.</h5>
+          <h5 i18n="@@title-accomodations">Choose from more than 500,000 accommodations. We are present in ALL
+            countries of the world.</h5>
         </div>
       </div>
     </div>
@@ -23,7 +24,7 @@
     <div class="col">
       <div class="mo-search-summary">
         <p class="text-center">
-          <strong i18n="@@your-search">Your search:</strong>
+          <strong i18n="@@your-search">Your search: </strong>
           <i class="fa fa-map-marker"></i>
           <span class="destination">{{criteria | destination}}</span>
           <span class="sep">|</span>
@@ -32,7 +33,8 @@
           <span i18n="@@to">to</span> {{criteria.checkOut | dateFormat:environment.organization.dateFormat}}
           <span class="sep">|</span>
           <i class="fa fa-bed" aria-hidden="true"></i> {{search?.roomsNum}}
-          <span i18n="@@room-plural">{search.roomsNum, plural, =0 {rooms} =1 {room} other {rooms}}</span>, {{search?.adultsNum}}
+          <span i18n="@@room-plural">{search.roomsNum, plural, =0 {rooms} =1 {room} other {rooms}}</span>,
+          {{search?.adultsNum}}
           <span i18n="@@adult-plural">{search.adultsNum, plural, =0 {adults} =1 {adult} other {adults}}</span>
           <span i18n="@@and">and</span> {{search?.childsNum}}
           <span i18n="@@child-plural">{search.childsNum, plural, =0 {children} =1 {child} other {children}}</span>
@@ -67,7 +69,8 @@
           <label i18n="@@mealplan">Mealplan</label>
           <select class="bordered form-control" [(ngModel)]="filter.boardCode" name="boardCode">
             <option [ngValue]="null" i18n="@@select-mealplan">Select Mealplan</option>
-            <option *ngFor="let mealplan of mealplans" [value]="mealplan.boardCode">{{mealplan?.texts[0]?.text}} - {{mealplan?.boardCode}}</option>
+            <option *ngFor="let mealplan of mealplans" [value]="mealplan.boardCode">{{mealplan?.texts[0]?.text}} -
+              {{mealplan?.boardCode}}</option>
           </select>
         </div>
 
@@ -128,8 +131,8 @@
       <div *ngIf="availability.length; then results else noResults"></div>
       <ng-template #results>
         <b2b-hotel-option *ngFor="let hotel of availability | paginate: { itemsPerPage: itemsPerPage, currentPage: page }; let i = index"
-          [hotel]="hotel" [hotelDetailInfo]="getHotelDetailInfo(hotel)" [search]="search" [criteria]="criteria" [mealplansAvailable]="mealplans"
-          [context]="context"></b2b-hotel-option>
+          [hotel]="hotel" [hotelDetailInfo]="getHotelDetailInfo(hotel)" [search]="search" [criteria]="criteria"
+          [mealplansAvailable]="mealplans" [context]="context"></b2b-hotel-option>
       </ng-template>
 
       <ng-template #noResults>
