--- a/src/app/platform/components/header/header.component.html
+++ b/src/app/platform/components/header/header.component.html
@@ -22,7 +22,8 @@
                     <span i18n="@@welcome">Welcome</span>
                     <strong> {{profile?.name}}</strong>
                   </span>
-                  <a class="dropdown-toggle" href="javascript: void(0);" id="dropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <a class="dropdown-toggle" href="javascript: void(0);" id="dropdownProfile" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
                     <img src="{{profile?.picture}}" alt="" class="rounded-circle">
                   </a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownProfile">
